--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
-/[Mm]emory[Cc]aptures/
+/[Mm]emoryCaptures/
 
 # Recordings can get excessive in size
 /[Rr]ecordings/
@@ -88,6 +88,7 @@ Blog
 About
 
 # Plastic source control files
+/.plastic
 /.plastic/
 /.plastic/*.*
 /.plastic/plastic.wktree
